<resources>
    <string name="app_name">app_insta</string>
    <string name="hello">HELLO!</string>
    <string name="register">Register</string>
    <string name="Log_in">login</string>
    <string name="FullName">fullname</string>
    <string name="let_login">now</string>
    <string name="now_login">now</string>
    <string name="Register">register</string>
    <string name="Password">pass</string>
    <string name="Email">email</string>
    <string name="Username">username</string>
    <string name="now_sign_up">sign_up</string>
    <string name="app_name">RetrofitAndroid</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
